# ProjectVOLVO

./: .gitignore  RAG_backend.py  README.md  package-lock.json  package.json  pyproject.toml
Backend/: RAG_backend.py  backend_faiss.py  prepare_data_faiss.py
app/api/chat/: route.ts
app/chat/: page.tsx
components/: PersonaSelector.tsx
docs/: description_offcial.md
src/Backend/: RAG_backend.py  backend_faiss.py  image_extract.py  metadata_injection.py  prepare_data.py  prepare_data_faiss.py
src/Frontend/: package-lock.json  package.json
src/Frontend/app/: globals.css
src/Frontend/app/api/chat/: route.ts
src/Frontend/app/chat/: page.tsx
src/Frontend/components/: MessageBubble.tsx  PersonaSelector.tsx  TypingIndicator.tsx
src/Frontend/lib/: types.ts
